<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GenViewFromXml</string>

    <string name="string_btn_positive">确定</string>
    <string name="string_btn_nagative">取消</string>

    <string name="string_share_title">分享到</string>
    <string name="string_share_sina">新浪微博</string>
    <string name="string_share_qqzone">QQ空间</string>
    <string name="string_share_weixinfriend">微信好友</string>
    <string name="string_share_weixinfriendzone">朋友圈</string>

</resources>
